fixed z-index bugs for <768px

--- a/src/shared/ui/sidebar/sidebar.module.scss
+++ b/src/shared/ui/sidebar/sidebar.module.scss
@@ -23,6 +23,7 @@
 		transform: translateX(-150%);
 		box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
 		background-color: var(--secondaryFull);
+		z-index: 100;
 
 		&.mobileOpen {
 			transform: translateX(0);
