--- a/src/shared/ui/text-editor/text-editor.module.scss
+++ b/src/shared/ui/text-editor/text-editor.module.scss
@@ -19,6 +19,7 @@
 	position: relative;
 	min-width: 0;
 	overflow: hidden;
+	z-index: 1;
 }
 
 .scrollContainer {
